Homepage frontend features added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,21 @@
-<h1>Home</h1>
+<div class="author">
+    <h1 class="Author">Hey I'm Raveen</h1>
+    <p class="Author Body"> 3rd Year Computer Engineering undergraduate | University of Sri Jayewardenepura | AIESECer</p>
+</div>
+
+<img src="https://m.media-amazon.com/images/I/31KVvZnHbuL.png" alt="Messi" class="Image" width="70" height="70 ">
+
+<section class="articles">
+    <h2 class="articles__heading">Latest Posts</h2>
+
+    <ul class="article_ul">
+        <li>
+            <a href="0">
+                <span>Post Title</span>
+                <span class="article__date">Post Date</span>
+            </a>
+        </li>
+    </ul>
+
+    <a href="0" class="pagination">&lt; View older Posts</a>
+</section>
