--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,12 @@
                 <span>Post Title</span>
                 <span class="article__date">Post Date</span>
             </a>
+            <a href="0">
+                <span>Post Title</span>
+                <span class="article__date">Post Date</span>
+            </a>
         </li>
     </ul>
 
-    <a href="0" class="pagination">&lt; View older Posts</a>
+    <a href="0" class="pagination">&lt;View older Posts</a>
 </section>
